Branch wise privillage fixes